--- a/.env
+++ b/.env
@@ -47,14 +47,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=smtp
+MAIL_HOST=mail.shifttechgs.com
+MAIL_PORT=465
+MAIL_USERNAME=info@shifttechgs.com
+MAIL_PASSWORD=Anashe@2024
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="customer@shifttechgs.com"
 MAIL_FROM_NAME="${APP_NAME}"
+CONTACT_EMAIL=info@shifttechgs.com
+MAIL_TIMEOUT=60
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
