sorted the contact forms

--- a/.env
+++ b/.env
@@ -51,7 +51,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=mail.shifttechgs.com
 MAIL_PORT=465
 MAIL_USERNAME=info@shifttechgs.com
-MAIL_PASSWORD=Anashe@2024
+MAIL_PASSWORD=briannacharity@1993
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="customer@shifttechgs.com"
 MAIL_FROM_NAME="${APP_NAME}"
